# vuma

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASES.md  justfile  run_failing.sh  rust-toolchain.toml  worklog.md
src/bd/: Cargo.toml
src/bd/src/: capd.rs  capd_lattice.rs  context.rs  context_solver.rs  descriptor.rs  inference.rs  lib.rs  manifold.rs  reld.rs  reld_refine.rs  repd.rs  unify.rs
src/tests/: Cargo.toml
src/tests/src/: abi_conformance.rs  all_backends_test.rs  bd_inference.rs  comprehensive_test.rs  cross_backend.rs  determinism.rs  dlist.rs  dwarf_ffi_integration.rs  e2e_cor.rs  elf_validation.rs  execution_test.rs  final_integration.rs  framework.rs  lib.rs  property_tests.rs  regression.rs  sha256d_backends.rs  showcase_verification.rs  standalone_print_test.rs
src/tests/src/benchmarks/: backend_comparison.rs  codegen_quality.rs  compilation_speed.rs  mod.rs  sha256d.rs
vuma/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.md  Makefile  README.md  RELEASES.md  WAVE_PLAN.md  WORKLOG.md  build.rs  justfile  rust-toolchain.toml  worklog.md
vuma/.cargo/: config.toml
vuma/.github/: dependabot.yml
vuma/.github/workflows/: ci.yml  cross-compile.yml
vuma/agent-ctx/: fix-placeholder-addresses-agent.md  fix-scg-to-ir-unknown-var.md  pi5-spin-wait-exception-fix.md  projection-scg-adapter-fullstack-dev.md  task-arm32-backend-fix.md  task-doc-comments.md  task-loongarch64-backend-fix.md  task-ppc64-backend-fix.md  task1-riscv64-alloc-free-fix.md  task2-arm64-clz-ctz-popcnt.md  task3-aarch64-backend-fix.md  trait-impls-agent.md
vuma/docs/: AUDIT.md  CONTRIBUTING.md  CONVENTIONS.md  GLOSSARY.md  ROADMAP.md  WORKLOG.md  architecture.md  language-reference.md  llm-language-reference.md  llm-system-prompt.md
vuma/docs/specs/: arm64-codegen-algorithm.md  bd-inference-algorithm.md  benchmark-design.md  decidability-analysis.md  dlist-proof.md  msg-construction-spec.md  multi-arch-isa-research.md  pi5-memory-model-spec.md  reld-formal-spec.md  repd-formal-spec.md  scg-formal-spec.md  security-model-spec.md  trivial-proofs.md  vuma-invariants-spec.md  vuma-verification-algorithm.md
vuma/examples/: README.md  atomics_demo.vuma  bsearch.vuma  debug_info.vuma  enum_demo.vuma  epoll_echo.vuma  fibonacci.vuma  gpio_blink.vuma  hex_dump.vuma  mmap_sha256d.vuma  pi5_sensor.vuma  self_exec.vuma  sha256d.vuma  signal_hash.vuma  sorted_map.vuma  spinlock.vuma  struct_demo.vuma  test_alloc.vuma  test_call.vuma  test_hex2.vuma  test_loop.vuma
vuma/src/: api.rs  diagnostics.rs  ffi.rs  lib.rs  llm_api.rs  logging.rs  main.rs  pipeline.rs  telemetry.rs
vuma/src/bd/: Cargo.toml
vuma/src/bd/src/: capd.rs  capd_lattice.rs  context.rs  context_solver.rs  descriptor.rs  error_reporting.rs  inference.rs  lib.rs  reld.rs  reld_refine.rs  repd.rs  repd_compat.rs  unify.rs
vuma/src/bootstrap/: vuma_compiler.vuma
vuma/src/codegen/: Cargo.toml
vuma/src/codegen/src/: arm32.rs  arm64.rs  backend.rs  control_flow.rs  dwarf.rs  emit.rs  ir.rs  lib.rs  loongarch64.rs  memory_safety.rs  mips64.rs  opt.rs  ppc64.rs  regalloc.rs  riscv64.rs  scg_to_ir.rs  target_desc.rs  wasm32.rs  x86_64.rs
vuma/src/cor/: Cargo.toml
vuma/src/cor/src/: bridge.rs  config.rs  deployment.rs  lib.rs  optimization.rs  ownership.rs  profile.rs  runtime.rs  speculative.rs  types.rs
vuma/src/ive/: Cargo.toml
vuma/src/ive/src/: bd_solver.rs  cache.rs  cleanup.rs  constraint.rs  debt.rs  escape.rs  exclusivity.rs  inference.rs  interpretation.rs  interprocedural.rs  invariant_aggregator.rs  lib.rs  liveness.rs  origin.rs  result.rs  verification.rs
vuma/src/lsp/: mod.rs
vuma/src/package/: Cargo.toml
vuma/src/package/src/: lib.rs  registry.rs
vuma/src/parser/: Cargo.toml
vuma/src/parser/fuzz/: Cargo.toml
vuma/src/parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  to_scg.rs
vuma/src/parser/tests/: edge_cases.rs
vuma/src/pi5/: Cargo.toml  build.rs  link.ld
vuma/src/pi5/src/: boot.rs  exception.rs  gic.rs  gpio.rs  lib.rs  mailbox.rs  mmio.rs  mmu.rs  platform.rs  power.rs  smp.rs  timer.rs  uart.rs
vuma/src/projection/: Cargo.toml
vuma/src/projection/src/: bidirectional.rs  conversational.rs  diff.rs  lib.rs  scg_adapter.rs  textual.rs  verification.rs  visual.rs
vuma/src/proof/: Cargo.toml
vuma/src/proof/src/: checker.rs  cleanup_proofs.rs  composition.rs  counterexample.rs  exclusivity_proofs.rs  interpretation_proofs.rs  judgment.rs  lib.rs  liveness_proofs.rs  models.rs  origin_proofs.rs  proof.rs  rules.rs  serialization.rs  tactics.rs
vuma/src/scg/: Cargo.toml
vuma/src/scg/src/: callgraph.rs  diff.rs  dominance.rs  edge.rs  graph.rs  lib.rs  liveness.rs  loop_detection.rs  node.rs  query.rs  region.rs  serialize.rs  structured_output.rs  transform.rs
vuma/src/std/: Cargo.toml
vuma/src/std/src/: alloc.rs  collections.rs  crypto.rs  env.rs  error.rs  fmt.rs  fs.rs  io.rs  lib.rs  math.rs  net.rs  path.rs  primitives.rs  process.rs  string.rs  sync.rs  thread.rs  time.rs
vuma/src/tests/: Cargo.toml
vuma/src/tests/proptest-regressions/: property_tests.txt
vuma/src/tests/src/: abi_conformance.rs  bd_inference.rs  benchmarks.rs  codegen.rs  concurrent.rs  cross_backend.rs  diagnostics_integration.rs  dwarf_ffi_integration.rs  e2e_cor.rs  execution_validation.rs  final_integration.rs  framework.rs  full_pipeline.rs  graph.rs  lib.rs  parser_roundtrip.rs  pi5_hardware.rs  property_tests.rs  regression.rs  sha256d.rs  trivial.rs  wasm_validation.rs
vuma/src/vuma/: Cargo.toml
vuma/src/vuma/src/: access.rs  access_analysis.rs  address.rs  derivation.rs  invariant_cleanup.rs  invariant_exclusivity.rs  invariant_liveness.rs  invariant_origin.rs  lib.rs  msg.rs  msg_builder.rs  msg_incremental.rs  program_point.rs  region.rs  repl.rs  scg_to_msg.rs  security.rs  sync.rs
vuma/tests/gold_standard/: README.md  RUN_TESTS.md  build_categories.py  differential_sweep_200.txt  manifest.json  o0_o3_results.txt  results_baseline.txt
vuma/tests/gold_standard/arithmetic/: README.md  arith2_abundant_number.vuma  arith_gcd.vuma  (+192 more)
(+7482 files in other folders)
