[package]
name = "vuma"
version = "0.1.0-alpha.1"
edition = "2021"
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version = "1.75"

[workspace]
members = [
    "src/scg",
    "src/ive",
    "src/vuma",
    "src/bd",
    "src/cor",
    "src/parser",
    "src/codegen",
    "src/std",
    "src/proof",
    "src/tests",
    "src/package",
]

[workspace.package]
version = "0.1.0-alpha.1"
description = "Verified-Unsafe Memory Access — a programming language framework with behavioral verification, 10-architecture codegen, and LLM integration"
repository = "https://github.com/pkhairkh/vuma"
license = "MIT"
keywords = ["compiler", "verification", "memory-safety", "codegen", "ai-native"]
categories = ["compilers", "development-tools", "memory-management"]
authors = ["Parham Khairkhah"]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
vuma-scg = { path = "src/scg" }
vuma-ive = { path = "src/ive" }
vuma-core = { path = "src/vuma" }
vuma-bd = { path = "src/bd" }
vuma-codegen = { path = "src/codegen" }
vuma-parser = { path = "src/parser" }
vuma-cor = { path = "src/cor" }
vuma-proof = { path = "src/proof" }
vuma-std = { path = "src/std" }
vuma-package = { path = "src/package" }
# External crates — pinned
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
colored = "3"
chrono = "0.4"
indexmap = "2"
smallvec = "1"
hashbrown = { version = "0.14", features = ["serde"] }
toml = "0.8"
libc = "0.2"
tempfile = "3"
proptest = "1"

[workspace.metadata]
release = "alpha"
release-channel = "pre-release"
min-rust-version = "1.75"
msrv-policy = "latest-stable"
homepage = "https://github.com/pkhairkh/vuma"
documentation = "https://github.com/pkhairkh/vuma/tree/main/docs"
bug-tracker = "https://github.com/pkhairkh/vuma/issues"
changelog = "https://github.com/pkhairkh/vuma/blob/main/CHANGELOG.md"
license-file = "LICENSE"

[dependencies]
vuma-scg.workspace = true
vuma-ive.workspace = true
vuma-core.workspace = true
vuma-bd.workspace = true
vuma-codegen.workspace = true
vuma-parser.workspace = true
vuma-cor.workspace = true
vuma-proof.workspace = true
vuma-package.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
colored.workspace = true
chrono.workspace = true
indexmap.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
toml.workspace = true

[build-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
