[package]
name = "vuma"
version = "0.1.0"
edition = "2021"
description = "Verified-Unsafe Memory Access - AI-Native Programming Language Framework"
authors = ["Super Z (GLM-5.1)"]

[workspace]
members = [
    "src/scg",
    "src/ive",
    "src/vuma",
    "src/bd",
    "src/cor",
    "src/projection",
    "src/parser",
    "src/codegen",
    "src/pi5",
    "src/std",
    "src/proof",
    "src/tests",
]

[dependencies]
vuma-scg = { path = "src/scg" }
vuma-ive = { path = "src/ive" }
vuma-core = { path = "src/vuma" }
vuma-bd = { path = "src/bd" }
vuma-codegen = { path = "src/codegen" }
vuma-parser = { path = "src/parser" }
vuma-cor = { path = "src/cor" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
colored = "2"
chrono = "0.4"
indexmap = "2"
smallvec = "1"
hashbrown = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
