[package]
name = "vuma"
version = "0.2.0"
edition = "2021"
description = "Verified-Unsafe Memory Access — an AI-native programming language framework with behavioral verification, 8-architecture codegen, and LLM integration"
repository = "https://github.com/vuma-lang/vuma"
license = "MIT"
keywords = ["compiler", "verification", "memory-safety", "codegen", "ai-native"]
categories = ["compilers", "development-tools", "memory-management"]
authors = ["Super Z (GLM-5.1)"]

[workspace]
members = [
    "src/scg",
    "src/ive",
    "src/vuma",
    "src/bd",
    "src/cor",
    "src/projection",
    "src/parser",
    "src/codegen",
    "src/std",
    "src/proof",
    "src/tests",
    "src/package",
]

[dependencies]
vuma-scg = { path = "src/scg" }
vuma-ive = { path = "src/ive" }
vuma-core = { path = "src/vuma" }
vuma-bd = { path = "src/bd" }
vuma-codegen = { path = "src/codegen" }
vuma-parser = { path = "src/parser" }
vuma-cor = { path = "src/cor" }
vuma-proof = { path = "src/proof" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
colored = "2"
chrono = "0.4"
indexmap = "2"
smallvec = "1"
hashbrown = "0.14"
vuma-package = { path = "src/package" }
toml = "0.8"

[build-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
