[package]
name = "vuma-cor"
version.workspace = true
edition.workspace = true
description = "Continuous Optimization Runtime — JIT optimization, profiling, speculative execution, and deployment"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
vuma-scg.workspace = true
vuma-codegen.workspace = true
serde.workspace = true
log.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true
