[package]
name = "vuma-package"
version.workspace = true
edition.workspace = true
description = "VUMA Package Manager — manifest parser, dependency resolver, local registry"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
log.workspace = true
tempfile.workspace = true
