[package]
name = "vuma-projection"
version.workspace = true
edition.workspace = true
description = "Projection System — textual, visual, and LLM-facing representations of VUMA programs"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
vuma-scg.workspace = true
serde.workspace = true
colored.workspace = true
thiserror.workspace = true
