[package]
name = "vuma-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
vuma-scg = { path = "../scg" }
vuma-ive = { path = "../ive" }
vuma-core = { path = "../vuma" }
vuma-bd = { path = "../bd" }
vuma-proof = { path = "../proof" }
vuma-parser = { path = "../parser" }
vuma-codegen = { path = "../codegen" }
vuma-cor = { path = "../cor" }
vuma = { path = "../.." }
anyhow = "1"
chrono = "0.4"
log = "0.4"
libc = "0.2"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
