[package]
name = "vuma-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
hashbrown = "0.14"
vuma-scg = { path = "../scg" }
vuma-parser = { path = "../parser" }
vuma-ive = { path = "../ive" }
vuma-bd = { path = "../bd" }
vuma-cor = { path = "../cor" }
vuma-codegen = { path = "../codegen" }
vuma-proof = { path = "../proof" }
